{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 187,
  "lineage": "4efab403-f934-4028-d9b9-c4d00cdcaba9",
  "resources": [
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_rules",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-allow-example-google",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:21.114-08:00",
            "deny": [],
            "description": "Allow egress example",
            "destination_ranges": [
              "142.250.178.14/32",
              "74.125.197.0/24",
              "74.125.199.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-allow-example-google",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-allow-example-google",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-allow-example-google",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "egress-allow-fastly-cdn-for-pypi",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "3128"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:10.767-08:00",
            "deny": [],
            "description": "Allow egress from instances in this network to the Fastly CDN IP Ranges, which is used by PyPi",
            "destination_ranges": [
              "103.244.50.0/24",
              "103.245.222.0/23",
              "103.245.224.0/24",
              "104.156.80.0/20",
              "140.248.128.0/17",
              "140.248.64.0/18",
              "146.75.0.0/17",
              "151.101.0.0/16",
              "157.52.64.0/18",
              "167.82.0.0/17",
              "167.82.128.0/20",
              "167.82.160.0/20",
              "167.82.224.0/20",
              "172.111.64.0/18",
              "185.31.16.0/22",
              "199.232.0.0/16",
              "199.27.72.0/21",
              "23.235.32.0/20",
              "43.249.72.0/22"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-allow-fastly-cdn-for-pypi",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-allow-fastly-cdn-for-pypi",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-allow-fastly-cdn-for-pypi",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "egress-allow-private-gcp-services",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:18.671-08:00",
            "deny": [],
            "description": "Allow egress from instances in this network to the google service apis private range",
            "destination_ranges": [
              "199.36.153.8/30"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-allow-private-gcp-services",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-allow-private-gcp-services",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-allow-private-gcp-services",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "egress-allow-restricted-gcp-services",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:08.918-08:00",
            "deny": [],
            "description": "Allow egress from instances in this network to the google service apis restricted range",
            "destination_ranges": [
              "199.36.153.4/30"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-allow-restricted-gcp-services",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-allow-restricted-gcp-services",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-allow-restricted-gcp-services",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "egress-allow-tcp-git",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "9418"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:09.282-08:00",
            "deny": [],
            "description": "To allow connection to GitHub git endpoints - Egress",
            "destination_ranges": [
              "140.82.112.0/20",
              "140.82.112.33/32",
              "140.82.112.34/32",
              "140.82.113.33/32",
              "140.82.113.34/32",
              "140.82.114.33/32",
              "140.82.114.34/32",
              "140.82.121.33/32",
              "140.82.121.34/32",
              "143.55.64.0/20",
              "185.199.108.0/22",
              "192.30.252.0/22",
              "192.30.255.164/31",
              "20.200.245.241/32",
              "20.200.245.245/32",
              "20.200.245.247/32",
              "20.200.245.248/32",
              "20.201.28.144/32",
              "20.201.28.148/32",
              "20.201.28.151/32",
              "20.201.28.152/32",
              "20.205.243.160/32",
              "20.205.243.164/32",
              "20.205.243.166/32",
              "20.205.243.168/32",
              "20.207.73.82/32",
              "20.207.73.83/32",
              "20.207.73.85/32",
              "20.207.73.86/32",
              "20.233.54.49/32",
              "20.233.54.52/32",
              "20.233.54.53/32",
              "20.233.54.55/32",
              "20.248.137.48/32",
              "20.248.137.49/32",
              "20.248.137.50/32",
              "20.248.137.52/32",
              "20.27.177.113/32",
              "20.27.177.116/32",
              "20.27.177.117/32",
              "20.27.177.118/32",
              "20.87.225.211/32",
              "20.87.225.212/32",
              "20.87.225.214/32",
              "20.87.225.216/32"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-allow-tcp-git",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-allow-tcp-git",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-allow-tcp-git",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "egress-deny-all",
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-01-27T22:15:10.168-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Blanket default deny rule for egress",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/egress-deny-all",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress-deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65535,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/egress-deny-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "ingress-allow-tcp-git",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "9418"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:10.582-08:00",
            "deny": [],
            "description": "To allow connection to GitHub git endpoints - Ingress",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/ingress-allow-tcp-git",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "ingress-allow-tcp-git",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/ingress-allow-tcp-git",
            "source_ranges": [
              "140.82.112.0/20",
              "140.82.112.33/32",
              "140.82.112.34/32",
              "140.82.113.33/32",
              "140.82.113.34/32",
              "140.82.114.33/32",
              "140.82.114.34/32",
              "140.82.121.33/32",
              "140.82.121.34/32",
              "143.55.64.0/20",
              "185.199.108.0/22",
              "192.30.252.0/22",
              "192.30.255.164/31",
              "20.200.245.241/32",
              "20.200.245.245/32",
              "20.200.245.247/32",
              "20.200.245.248/32",
              "20.201.28.144/32",
              "20.201.28.148/32",
              "20.201.28.151/32",
              "20.201.28.152/32",
              "20.205.243.160/32",
              "20.205.243.164/32",
              "20.205.243.166/32",
              "20.205.243.168/32",
              "20.207.73.82/32",
              "20.207.73.83/32",
              "20.207.73.85/32",
              "20.207.73.86/32",
              "20.233.54.49/32",
              "20.233.54.52/32",
              "20.233.54.53/32",
              "20.233.54.55/32",
              "20.248.137.48/32",
              "20.248.137.49/32",
              "20.248.137.50/32",
              "20.248.137.52/32",
              "20.27.177.113/32",
              "20.27.177.116/32",
              "20.27.177.117/32",
              "20.27.177.118/32",
              "20.87.225.211/32",
              "20.87.225.212/32",
              "20.87.225.214/32",
              "20.87.225.216/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": "ingress-allow-tcp-ssh-from-iap",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-27T22:15:18.572-08:00",
            "deny": [],
            "description": "FW rules required to ssh into instances via IAP - useful for diagnosing faulty notebooks/instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/turing-alcove-384403/global/firewalls/ingress-allow-tcp-ssh-from-iap",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "ingress-allow-tcp-ssh-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "priority": 65534,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/firewalls/ingress-allow-tcp-ssh-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.71.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-01-27T22:15:06.420-08:00",
            "id": "projects/turing-alcove-384403/global/addresses/example-vpc-private-ip-alloc",
            "name": "example-vpc-private-ip-alloc",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "prefix_length": 16,
            "project": "turing-alcove-384403",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/addresses/example-vpc-private-ip-alloc"
          },
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/turing-alcove-384403/global/networks/example-vpc",
            "mtu": 1460,
            "name": "example-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5801318187905076798",
            "project": "turing-alcove-384403",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc"
          }
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_internet_gateway",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/turing-alcove-384403/global/routes/example-vpc-default-internet-gw",
            "name": "example-vpc-default-internet-gw",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/routes/example-vpc-default-internet-gw",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_googleapis_ips",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "199.36.153.8/30",
            "id": "projects/turing-alcove-384403/global/routes/private-googleapis",
            "name": "private-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/routes/private-googleapis",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "restricted_googleapis_ips",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "199.36.153.4/30",
            "id": "projects/turing-alcove-384403/global/routes/restricted-googleapis",
            "name": "restricted-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "turing-alcove-384403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/routes/restricted-googleapis",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-27T22:15:07.811-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/turing-alcove-384403/regions/us-west1/routers/example-vpc-router",
            "name": "example-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "project": "turing-alcove-384403",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/regions/us-west1/routers/example-vpc-router"
          },
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "turing-alcove-384403/us-west1/example-vpc-router/example-vpc-vertex-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "example-vpc-vertex-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "turing-alcove-384403",
            "region": "us-west1",
            "router": "example-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/regions/us-west1/subnetworks/example-vpc-vertex-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network",
            "module.private_vertex_nb_instances.google_compute_router.router",
            "module.private_vertex_nb_instances.google_compute_subnetwork.vertex-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_vertex_nb_instances",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vertex-subnetwork",
      "provider": "module.private_vertex_nb_instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-27T22:15:08.736-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/turing-alcove-384403/regions/us-west1/subnetworks/example-vpc-vertex-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "example-vpc-vertex-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/global/networks/example-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "turing-alcove-384403",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/turing-alcove-384403/regions/us-west1/subnetworks/example-vpc-vertex-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.private_vertex_nb_instances.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}